--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,23 +1,12 @@
-apiVersion: backstage.io/v1alpha1
+apiVersion: backstage.io/v1beta3
 kind: Component
 metadata:
-  name: backstage
-  description: |
-    Backstage is an open-source developer portal that puts the developer experience first.
-  links:
-    - title: Website
-      url: http://backstage.io
-    - title: Documentation
-      url: https://backstage.io/docs
-    - title: Storybook
-      url: https://backstage.io/storybook
-    - title: Discord Chat
-      url: https://discord.com/invite/EBHEGzX
+  name: ${{ values.name }}
+  title: ${{ values.title }}
+  description: ${{ values.description }}
   annotations:
-    github.com/project-slug: backstage/backstage
-    backstage.io/techdocs-ref: dir:.
-    lighthouse.com/website-url: https://backstage.io
+    github.com/project-slug: ${{ values.destination.owner }}/${{ values.destination.repo }}
 spec:
-  type: library
-  owner: CNCF
-  lifecycle: experimental
+  type: service
+  lifecycle: development
+  owener: ${{ values.owner }}
