--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,12 +1,12 @@
-apiVersion: backstage.io/v1alpha1
+apiVersion: backstage.io/v1alpha3
 kind: Component
 metadata:
-  name: ${{ values.name }}
-  title: ${{ values.title }}
-  description: ${{ values.description }}
+  name: ${{ values.name | dump }}
+  title: ${{ values.title | dump }}
+  description: ${{ values.description | dump}}
   annotations:
     github.com/project-slug: ${{ values.destination.owner }}/${{ values.destination.repo }}
 spec:
   type: service
   lifecycle: development
-  owener: ${{ values.owner }}
+  owener: ${{ values.owner | dump }}
